--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-CuOF+2SnTUfTwSZjCXf01h7uYhfOBuxIhGKPbfEJ3+FqH/s6cIFN9bGr1HmAg4fQ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <style>
       body{       
-        background-image: url("../source/Fon.png");
+        background-image: url("source/Fon.png");
         color: black;
       }
       .blocks{
@@ -26,19 +26,19 @@
         <a class="nav-link active" aria-current="page" href="index.html"><font color = #FFC0CB onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)">NoSQL</font></a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" href="keyValue.html"><font color = #FFC0CB onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)"> БД-Ключ-Значение</font></a>
+        <a class="nav-link" href="pages/keyValue.html"><font color = #FFC0CB onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)"> БД-Ключ-Значение</font></a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" href="document.html"><font color = #FFC0CB onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)">БД-Документы</font></a>
+        <a class="nav-link" href="pages/document.html"><font color = #FFC0CB onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)">БД-Документы</font></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="graphs.html"><font color = #FFC0CB onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)" >БД-Графы</font></a>
+            <a class="nav-link" href="pages/graphs.html"><font color = #FFC0CB onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)" >БД-Графы</font></a>
             </li>
         <li class="nav-item">
-            <a class="nav-link" href="inMemory.html"><font color = #FFC0CB onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)" >БД в памяти</font></a>
+            <a class="nav-link" href="pages/inMemory.html"><font color = #FFC0CB onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)" >БД в памяти</font></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="searching.html"><font color = #FFC0CB onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)" >Поисковые БД</font></a>
+            <a class="nav-link" href="pages/searching.html"><font color = #FFC0CB onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)" >Поисковые БД</font></a>
         </li>
     </ul>
 </div>
@@ -46,7 +46,7 @@
         <div class="container-xxl">      
             
           <div class="border border-bottom-0 border-dark border-5">
-            <img src="../source/stripe.png" class="w-100" alt="top-stripe"> 
+            <img src="source/stripe.png" class="w-100" alt="top-stripe"> 
             <!---->
             <div class="row g-0 bg-light position-relative bg-dark  ">
                 <!-- 1st picture-->
@@ -161,7 +161,7 @@
             </div>          
         </div>
       </div>
-    <script src="../js/main.js"></script>
+    <script src="js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-popRpmFF9JQgExhfw5tZT4I9/CI5e2QcuUZPOVXb1m7qUmeR2b50u+YFEYe1wgzy" crossorigin="anonymous"></script>
 </body>
 </html>
