--- a/pages/keyValue.html
+++ b/pages/keyValue.html
@@ -22,7 +22,7 @@
   <div class="container-xxl">      
     <ul class="nav justify-content-center navbar-dark bg-dark ">
         <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="index.html"><font color = #FFC0CB onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)">NoSQL</font></a>
+        <a class="nav-link active" aria-current="page" href="../index.html"><font color = #FFC0CB onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)">NoSQL</font></a>
         </li>
         <li class="nav-item">
         <a class="nav-link" href="keyValue.html"><font color = #FFC0CB onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)"> БД-Ключ-Значение</font></a>
