--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
               </div>
                 
                 <!--  Table -->
+                <div class="container-xxl">
                 <table class="table table-bordered shrift-color container-xxl">
                   <thead>
                     <tr>
@@ -155,6 +156,7 @@
                     </tr>
                   </tbody>
                 </table>
+              </div>
             </div>          
         </div>
       </div>
