--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               </div>
                 
                 <!--  Table -->
-                <div class="container-xxl">
+                <div class="table-responsive">
                 <table class="table table-bordered shrift-color container-xxl">
                   <thead>
                     <tr>
@@ -156,7 +156,7 @@
                     </tr>
                   </tbody>
                 </table>
-              </div>
+                </div>
             </div>          
         </div>
       </div>
