--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 
                 <!--  Table -->
                 <div class="table-responsive">
-                <table class="table table-bordered shrift-color container-xxl">
+                <table class="table table-bordered shrift-color">
                   <thead>
                     <tr>
                       <th scope="col"></th>
