--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
     </ul>
 </div>
     <!--main-->
+    <div class="responsive">
         <div class="container-xxl">   
           <div class="border border-bottom-0 border-dark border-5">
             <img src="source/stripe.png" class="w-100" alt="top-stripe"> 
+            <br>
             <div class="row g-0 bg-light position-relative bg-dark  ">
 
               <div class="col-md-3 mb-md-0 p-md-4 bg-dark">
@@ -62,7 +64,7 @@
 
               <!-- Paragraph 2-->
               <div class="col-md-11  mb-md-0  p-4 pl-md-0 blocks bg-dark blocks  border  border-5 border-dark ml-1 mr-1">
-                <h5 onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)" class="mt-0 col-4">Как работает база данных NoSQL?</h5>
+                <h5 onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)" class="mt-0 col-12">Как работает база данных NoSQL?</h5>
                 <p onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)">Нереляционные базы данных используют разнообразные модели данных для доступа и управления данными.
                     Они оптимизированы для приложений, которые работают с большими обьемами данных и нуждаются в низкой задержке и гибких моделях данных.
                     Все это достигается путем смягчения жестких требований к непротиворечивости данных, характерных для других типов БД.</p>
@@ -160,6 +162,7 @@
             </div>          
         </div>
       </div>
+    </div>
     <script src="js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-popRpmFF9JQgExhfw5tZT4I9/CI5e2QcuUZPOVXb1m7qUmeR2b50u+YFEYe1wgzy" crossorigin="anonymous"></script>
 </body>
