--- a/pages/inMemory.html
+++ b/pages/inMemory.html
@@ -57,14 +57,14 @@
               </div>
               <!-- Paragraph 1-->
               <div class="col-md-8 p-4 pl-md-0 blocks bg-dark blocks border border-5 border-dark")>                
-                <h5 onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)" class="mt-0 col-2">БД в памяти</h5>
+                <h5 class="mt-0 col-12">БД в памяти</h5>
                 <p onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)">Часто в игровых и рекламных приложениях используются таблицы лидеров, хранение сессий и аналитика в реальном времени. Такие возможности требуют отклика в пределах нескольких микросекунд, при этом резкое возрастание трафика возможно в любой момент. Amazon ElastiCache предлагает Memcached и Redis для обработки высокопроизводительных рабочих нагрузок с низкой задержкой, которые нельзя обработать с помощью дисковых хранилищ данных. Такие рабочие нагрузки характерны, например, для сети McDonald’s. Еще одним примером специально разработанного хранилища данных является Amazon DynamoDB Accelerator (DAX). DAX позволяет DynamoDB считывать данные в несколько раз быстрее.</p>
               
             </div>
 
               <!-- Paragraph 2-->
               <div class="col-md-11  mb-md-0  p-4 pl-md-0 blocks bg-dark blocks  border  border-5 border-dark ml-1 mr-1">
-                <h5 onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)" class="mt-0 col-2">Что это такое?</h5>
+                <h5 class="mt-0 col-12">Что это такое?</h5>
                 <p onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)">База данных в памяти — это система управления базами данных, которая при хранении компьютерных данных в основном полагается на оперативную память. Она выделяется на фоне СУБД, в которых используется механизм дискового хранения. Базы данных в памяти быстрее, чем базы данных, оптимизированные для использования дисковых накопителей, поскольку доступ к диску медленнее, чем доступ к памяти, а внутренние алгоритмы оптимизации проще и выполняют меньше инструкций ЦП. Доступ к данным из памяти исключает время на поиск при их запросе, что обеспечивает более быструю и предсказуемую работу, чем при использовании дискового накопителя.</p>
 
               </div>              
@@ -74,7 +74,7 @@
                 </svg>
               </div>
               <div class="col-md-7 p-4 pl-md-0 blocks bg-dark blocks">
-                <h5 onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)" class="mt-0 col-4">Примеры использования</h5>
+                <h5 class="mt-0 col-12">Примеры использования</h5>
                   <ul>
                     <li onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)"> <span class="shrift-color">Ставки в реальном времени</span> <br>Ставки в реальном времени означают покупку и продажу показов онлайн-рекламы. Обычно ставку нужно делать, пока пользователь загружает веб-страницу, т.е. за 100-120 миллисекунд, а иногда и за 50 миллисекунд. В течение этого периода времени приложения ставок в режиме реального времени запрашивают у всех покупателей ставки на рекламное место, выбирают выигрышную ставку на основе нескольких критериев, отображают ставку и собирают информацию после показа рекламы. Базы данных в памяти являются идеальным выбором для приема, обработки и анализа данных в реальном времени с задержкой менее миллисекунды.</li>
                     <li onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)"><span class="shrift-color">Игровые рейтинговые таблицы</span><br>Относительная рейтинговая таблица в играх показывает позицию игрока относительно других игроков аналогичного ранга. Такие таблицы могут помочь привлечь игроков и тем самым не дать геймерам стать демотивированными по сравнению только с лучшими игроками. Для игр с миллионами игроков базы данных в памяти могут быстро доставлять результаты сортировки и обновлять рейтинговую таблицу в режиме реального времени.</li>
@@ -82,7 +82,7 @@
                     </ul>
               </div>
               <div class="col-md-10  mb-md-0  p-4 pl-md-0 blocks bg-dark blocks  border  border-5 border-dark ml-1 mr-1">
-                <h5 onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)" class="mt-0 col-4">Базы данных в памяти от AWS</h5>
+                <h5 class="mt-0 col-12">Базы данных в памяти от AWS</h5>
                 <ul>
                   <li onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)"> <span class="shrift-color">Amazon Elasticache for Redis</span> <br>Это очень быстрое хранилище данных в памяти, которое обеспечивает минимальную задержку для работы приложений в режиме реального времени в масштабе интернета.
                     Разработчики могут использовать ElastiCache в качестве нереляционной базы данных в памяти. 
