--- a/pages/searching.html
+++ b/pages/searching.html
@@ -16,7 +16,7 @@
         color:    #FFC0CB;  
       }
     </style>
-    <title>Нереляционные базы данных</title>
+    <title>Поисковые БД</title>
 </head>
 <body>
   <!--Navigation-->
@@ -58,19 +58,19 @@
               </div>
               <!-- Paragraph 1-->
               <div class="col-md-8 p-4 pl-md-0 blocks bg-dark blocks border border-5 border-dark")>                
-                <h5 onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)" class="mt-0 col-6">База данных поисковой системы</h5>
+                <h5 class="mt-0 col-12">База данных поисковой системы</h5>
                 <p onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)">Это тип нереляционной базы данных, предназначенной для поиска данных. Базы данных поисковых систем используют индексы для классификации схожих характеристик среди данных и облегчения поиска. Базы данных поисковых машин оптимизированы для работы с данными, которые могут быть обьемными, полуструктурированными или неструктурированными, и обычно предлагают специализированные методы, такие как полнотекстовый поиск, сложные поисковые выражения и ранжирование результатов поиска. </p>
               
             </div>
 
               <!-- Paragraph 2-->
               <div class="col-md-11  mb-md-0  p-4 pl-md-0 blocks bg-dark blocks  border  border-5 border-dark ml-1 mr-1">
-                <h5 onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)" class="mt-0 col-4">Примеры использования</h5>                
+                <h5 class="mt-0 col-6">Примеры использования</h5>                
                     <ul>
-                      <li onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)"> <div class="col-2"><div class="shrift-color">Поиск по тексту</div></div>                        
+                      <li onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)"> <span class="shrift-color">Поиск по тексту</span>                       
                         Базы данных поисковых машин могут обрабатывать полнотекстовый поиск быстрее, чем реляционные базы данных. Например, веб-сайт электронной коммерции может использовать базы данных поисковых систем для предоставления мгновенных автозаполнений или предложений для своих клиентов. Базы данных поисковых систем могут сортировать релевантные результаты на основе таких характеристик, как имя, цена, категория или данные о выпуске, и отображать результаты в структурированном виде. </li>
                         <br>
-                        <li onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)"> <div class="col-3"><div class="shrift-color">Ведение журнала и анализ</div></div>
+                        <li onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)"> <span class="shrift-color">Ведение журнала и анализ</span>
                           Поддержка более крупных приложений, которые либо распределены по нескольким узлам, либо состоят из нескольких небольших приложений, выполняющих поиск событий в файлах журнала, может стать утомительным. Базы данных поисковых систем могут более эффективно обрабатывать ведение журнала. Вы можете централизовать свои журналы из разных приложений, индексируя их с помощью базы данных поисковой системы. Например, вы можете просмотреть журналы вашего веб-сервера Apache в сочетании с файлами журнала вашего сервера приложений. Поскольку вся информация доступна в реальном времени, вы можете реализовать визуальное представление того, что происходит в вашей системе в реальном времени, что поможет вам быстрее находить проблемы. </li>
                           <br> <br>
                     </ul>
@@ -82,7 +82,7 @@
                 </svg>
               </div>
               <div class="col-md-7 p-4 pl-md-0 blocks bg-dark blocks">
-                <h5 onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)" class="mt-0 col-8">Наиболее популярная БД</h5>
+                <h5 class="mt-0 col-12">Наиболее популярная БД</h5>
                 <p onMouseOver="setIfFocused(this)" onMouseOut="setIfUnfocused(this)">Amazon ElasticSearch service - полностю управляемый сервис, который предоставляет простые в использовании API-интерфейсы и возможности аналитики в реальном времени, а также масштабируемость и безопасность, необходимые для производственных рабочих нагрузок. Сервис предлагает встроенную интеграцию с многими другими сервисами по типу Kibana, Logstash и AWS.</p>                 
               </div>              
             </div>          
